--- a/approved/2.2-sqli/docker-compose.yml
+++ b/approved/2.2-sqli/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '2'
 services:
  web:
-   image: vulhub/magento:2.2.7
+   build:
+    context: .
+    dockerfile: ./Dockerfile
    depends_on:
     - mysql
    ports:
