--- a/approved/working-imagetragick/Dockerfile
+++ b/approved/working-imagetragick/Dockerfile
@@ -1,11 +1,6 @@
 FROM debian:bullseye
 
-
-# RUN sed -i s/deb.debian.org\\/debian\ stretch-updates/archive.debian.org\\/debian\ stretch/g /etc/apt/sources.list
-# RUN sed -i s/deb.debian.org\\/debian\ stretch/archive.debian.org\\/debian\ stretch/g /etc/apt/sources.list
-RUN sed -i s/security.debian.org\\/debian-security\ stretch/archive.debian.org\\/debian-security\ stretch/g /etc/apt/sources.list
-
-ADD https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/download/gs9533/ghostscript-9.53.3-linux-x86_64.tgz /tmp/ghostscript.tgz
+ADD https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/download/gs926/ghostscript-9.26-linux-x86_64.tgz /tmp/ghostscript.tgz
 
 RUN set -ex \
     && tar zxf /tmp/ghostscript.tgz --strip-components 1 -C /tmp/ \
@@ -13,19 +8,21 @@ RUN set -ex \
     && mv /tmp/gs-* /usr/local/bin/gs \
     && rm -rf /tmp/*
 
-ARG IM_VERSION=7.0.10-36
+ARG IM_VERSION=6.9.2-10
 RUN set -ex \
     && apt-get update \
+    && apt-get install -y --no-install-recommends curl php-cli \
     && savedAptMark="$(apt-mark showmanual)" \
     && apt-get install -y --no-install-recommends automake autoconf libtool libltdl-dev wget ca-certificates xz-utils gcc make libpng-dev libjpeg62-turbo-dev \
         libfontconfig1-dev libfreetype6-dev librsvg2-dev libxml2-dev zlib1g-dev libgif-dev \
-    && wget -qO- https://github.com/ImageMagick/ImageMagick/archive/${IM_VERSION}.tar.gz \
-        | tar xz --strip-components=1 -C /usr/src \
+    && wget -qO- https://www.imagemagick.org/download/releases/ImageMagick-${IM_VERSION}.tar.xz \
+     | tar xJ --strip-components=1 -C /usr/src \
     && cd /usr/src \
     && ./configure --prefix=/usr --with-gslib --disable-dependency-tracking \
     && make \
     && make install \
     && ldconfig /usr/lib \
+    # clean
     && apt-mark auto '.*' > /dev/null \
 	# && apt-mark manual $savedAptMark \
 	&& ldd /usr/bin/* \
