--- a/approved/working-imagetragick/docker-compose.yml
+++ b/approved/working-imagetragick/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '2'
 services:
  web:
-   image: vulhub/imagemagick:6.9.2-10-php
+   build: 
+    context: .
+    dockerfile: ./Dockerfile 
    command: php -t /var/www/html -S 0.0.0.0:8080
    volumes:
     - ./index.php:/var/www/html/index.php
