--- a/approved/working-pwnscriptum-wordpress/docker-compose.yml
+++ b/approved/working-pwnscriptum-wordpress/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '2'
 services:
  web:
-   image: vulhub/wordpress:4.6
+   build:
+      context: .
+      dockerfile: ./Dockerfile 
    depends_on:
     - mysql
    environment: 
@@ -10,7 +12,7 @@ services:
     - WORDPRESS_DB_PASSWORD=root
     - WORDPRESS_DB_NAME=wordpress
    ports:
-    - "8080:80"
+    - "8081:80"
  mysql:
    image: mysql:5
    environment: 
