--- a/approved/unacc/docker-compose.yml
+++ b/approved/unacc/docker-compose.yml
@@ -7,7 +7,9 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: root
       MONGO_INITDB_DATABASE: yapi
   web:
-    image: vulhub/yapi:1.9.2
+    build:
+      context: .
+      dockerfile: ./Dockerfile
     ports:
     - "3000:3000"
     volumes:
